<?xml version="1.0" encoding="utf-8"?>
<!--
/*
** Copyright Vik Sintus Projects
*/
-->

<!-- berikut adalah setingan tampang kotak search
     utk info lebih lanjut silahkan lihat
     Developer Guide di
     http://developer.android.com/guide/topics/search/
 -->
<searchable xmlns:android="http://schemas.android.com/apk/res/android"
    android:label="@string/app_name"
    android:hint="@string/tulisanDiKotakCari"
    android:searchSettingsDescription="@string/artinya"
    android:searchSuggestAuthority="smk.adzikro.indextemaquran.PenghubungData"
    android:searchSuggestIntentAction="android.intent.action.VIEW"
    android:searchSuggestIntentData="content://smk.adzikro.indextemaquran.PenghubungData/indexquran"
    android:searchSuggestSelection=" ?"
    android:searchSuggestThreshold="1"
    android:includeInGlobalSearch="true"
    >
</searchable>