<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:fitsSystemWindows="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.CollapsingToolbarLayout
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginStart="48dp"
            android:background="@color/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            android:fitsSystemWindows="true"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <android.support.v7.widget.Toolbar
                android:layout_width="match_parent"
                android:id="@+id/toolbar"
                android:background="@color/colorPrimary"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_collapseMode="pin"
                android:layout_height="?attr/actionBarSize">
                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/list_surat"
                    android:entries="@array/nama_surat_ar"/>
                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/list_ayat"
                    android:entries="@array/nama_surat_id"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_goto_quran"/>
                <SearchView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/list_tafsir"
                    android:id="@+id/action_cari"></SearchView>
            </android.support.v7.widget.Toolbar>
            <RelativeLayout
                android:layout_width="match_parent"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                android:layout_marginTop="?attr/actionBarSize"
                app:layout_collapseMode="none"
                android:layout_height="wrap_content">
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:layout_height="wrap_content"
                    android:id="@+id/mode_display"
                    android:text="@string/mode_display"/>
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/mode_display"
                    android:checked="true"
                    android:id="@+id/translate"
                    android:text="@string/translate"/>
                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/quran_readers_name"
                    android:layout_below="@+id/translate"
                    android:id="@+id/list_translate"/>
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/list_translate"
                    android:id="@+id/text_latin"
                    android:checked="true"
                    android:text="@string/text_latin"
                    tools:text="Display Text Latin"/>
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/text_latin"
                    android:id="@+id/tafsir"
                    android:text="@string/display_tafsir"/>

            </RelativeLayout>

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:background="@color/colorPrimary"
        android:id="@+id/frame"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_height="match_parent"></FrameLayout>
    <android.support.design.widget.BottomNavigationView
        app:menu="@menu/menu_bottom_nav"
        android:layout_width="match_parent"
        android:layout_gravity="bottom"
        android:layout_height="wrap_content"/>
</android.support.design.widget.CoordinatorLayout>