<?xml version="1.0" encoding="utf-8"?>
<ScrollView
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
xmlns:ads="http://schemas.android.com/apk/res-auto"
android:layout_width="match_parent"
android:layout_height="match_parent"

 android:background="@color/colorPrimary"
xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
<FrameLayout
    android:id="@+id/fr_image"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:src="@drawable/ic_launcher"
        android:adjustViewBounds="true"/>
</FrameLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_below="@+id/fr_image"
        android:id="@+id/info"
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:text="@string/versi"
            android:layout_gravity="center"
            android:gravity="center"
            android:id="@+id/versi"
            android:textColor="@color/title_color"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="match_parent"
            android:text="@string/infoapp"
            android:layout_gravity="center"
            android:id="@+id/infoapp"
            android:gravity="center"
            android:textColor="@color/title_color"
            android:layout_height="wrap_content" />

    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:background="@color/tranparent"
        android:text="@string/upgrade"
        android:clickable="true"
        android:layout_below="@+id/info"
        android:id="@+id/upgrade"/>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    android:layout_below="@+id/upgrade">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="PESANTREN ADZ-DZIKRO"
        android:textColor="@color/title_color"
        android:textStyle="bold"
        android:gravity="center"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Kawasan Bandung Utara, Punclut Ciumbuleuit"
        android:textSize="15sp"
        android:gravity="center"
        android:textColor="@color/title_color"
        android:layout_centerVertical="true"
        android:layout_marginTop="15dp"
        android:textStyle="normal"/>
    <TextView android:text="SMK ADZ-DZIKRO"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/title_color"
        android:layout_gravity="center"/>
    <TextView android:text="Jl. Tugulaksana 02/13 Desa Pagerwangi Kec. Lembang Kab. Bandung Barat 40392\n+6281573138275\nadzikro@gmail.com"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/title_color"
        android:layout_gravity="center"/>
</LinearLayout>
    </RelativeLayout>
</ScrollView>
